# gors

./: .gitignore  .gitmodules  1065.bundle.js  1118.bundle.js  1122.bundle.js  1134.bundle.js  1147.bundle.js  1156.bundle.js  1259.bundle.js  1282.bundle.js  1420.bundle.js  1438.bundle.js  1446.bundle.js  1448.bundle.js  1471.bundle.js  1560.bundle.js  1710.bundle.js  1740.bundle.js  180.bundle.js  1886.bundle.js  1888.bundle.js  1914.bundle.js  1960.bundle.js  1961.bundle.js  198.bundle.js  205.bundle.js  2060.bundle.js  2075.bundle.js  2094.bundle.js  2140.bundle.js  2184.bundle.js  2240.bundle.js  2244.bundle.js  2278.bundle.js  2398.bundle.js  249.bundle.js  2571.bundle.js  2586.bundle.js  2658.bundle.js  2686.bundle.js  (+147 more)
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/parser/: generics
fuzz/corpus/scanner/: comments  strings
fuzz/fuzz_targets/: compiler.rs  lexer.rs  parser.rs  roundtrip.rs  scanner.rs
fuzz/scripts/: export-crashes.sh
fuzz/tests/: proptest.proptest-regressions  proptest.rs
gors/: Cargo.toml  build.rs  error.rs  lib.rs
gors-cli/: Cargo.toml  main.rs
gors-cli/src/: main.rs
gors-cli/tests/: go.mod  main.go  tests.rs
gors-cli/tests/files/: array.go  call.go  comment.go  defer.go  for.go  func.go  goroutine.go  if.go  label.go  map.go  method.go  primary.go  slice.go  unary.go
gors-cli/tests/go-cli/: go-cli  main.go
gors-cli/tests/programs/: fibonacci_iterative.go  fibonacci_memoized.go
gors-cli/tests/programs/fibonacci/: main.go
gors-tests/: Cargo.toml
gors-tests/tests/: tests.rs
gors-tests/tests/files/: const.go  if.go  import.go  struct.go
gors/ast/: hashable.rs  mod.rs  printable.rs  printer.rs
gors/codegen/: mod.rs  tracked.rs
gors/compiler/: mod.rs  passes.rs
gors/compiler/passes/: flatten_block.rs  hoist_use.rs  inline_fmt.rs  map_type.rs  mod.rs  simplify_return.rs  type_conversion.rs
gors/mapping/: mod.rs
gors/parser/: mod.rs
gors/scanner/: mod.rs
gors/src/: error.rs  generated_names.rs  go_stdlib.rs  lib.rs  noop_methods.rs  profile.rs  reflect_names.rs
gors/src/compiler/: active_names.rs  ast_inspect.rs  borrowed_views.rs  builtin_pruning.rs  builtin_roots.rs  call_arg_rewrites.rs  const_context.rs  current_receiver.rs  dce_iteration.rs  dce_pruning.rs  dce_reachability.rs  defer_context.rs  display_impls.rs  embedded_interfaces.rs  external_interface_implementors.rs  external_roots.rs  generated_attrs.rs  go_strings.rs  goto_context.rs  import_context.rs  imported_interface_impls.rs  interface_hooks.rs  interface_impls.rs  interface_method_sets.rs  interface_type_env.rs  ir.rs  item_reachability.rs  loop_control.rs  manifest.rs  method_expressions.rs  mod.rs  named_returns.rs  noop_interfaces.rs  package_context.rs  phantom_type_params.rs  predeclared.rs  reachability_cache.rs  reachability_context.rs  reachability_names.rs  receiver_method_targets.rs  (+24 more)
gors/src/compiler/passes/: coerce_types.rs  coerce_types_audit.md  hoist_use.rs  index_cast.rs  inject_channel.rs  inline_errors.rs  interface_param.rs  map_type.rs  mod.rs  nil_check.rs  simplify_return.rs  string_lit.rs  trait_param.rs  type_conversion.rs
gors/src/compiler/passes/coerce_types/: call_args.rs  comparisons.rs  evaluation_order.rs  pointer_cells.rs  static_false.rs  structural_helpers.rs  syntax.rs  tuple_newtypes.rs  value_materialization.rs
gors/src/compiler/runtime_primitives/: os.rs  reflect.rs  sync.rs  sync_atomic.rs
gors/src/mapping/: mod.rs
gors/src/parser/: mod.rs
gors/src/printer/: mod.rs
gors/src/resolve/: mod.rs  runtime_primitives.rs  structural_helpers.rs
gors/src/resolve/runtime_primitives/: reflectlite.rs  runtime.rs  syscall.rs
gors/src/resolve/structural_helpers/: fmt_flush.rs  mut_ref_forwarders.rs  noop_interfaces.rs  syn_helpers.rs
gors/src/scanner/: mod.rs
gors/src/token/: mod.rs
gors/std/fmt/: mod.rs
gors/tests/: common.rs  compile.rs  run.rs  runner.rs  test_integration_generate.rs  test_integration_go_programs.rs  test_integration_go_repositories.rs  test_integration_go_spec.rs  test_integration_go_stdlib.rs  test_integration_lexer.rs  test_integration_parser.rs  test_integration_run.rs
gors/tests/common/: reporter.rs  runner.rs
gors/tests/fixtures/go_programs/_generic_type_method/: NOTES.md  main.go
gors/tests/fixtures/go_programs/_type_switch_eval_once/: NOTES.md
gors/tests/fixtures/go_programs/_variadic_method/: NOTES.md  go.mod
gors/tests/fixtures/go_programs/address_of_field/: go.mod  main.go
gors/tests/fixtures/go_programs/address_of_pointer_field/: go.mod  main.go
gors/tests/fixtures/go_programs/any_assignment/: go.mod
gors/tests/fixtures/go_programs/any_parameter/: main.go
gors/tests/fixtures/go_programs/any_type/: go.mod  main.go
gors/tests/fixtures/go_programs/blank_identifier/: go.mod
gors/tests/fixtures/go_programs/builtin_append_copy/: main.go
gors/tests/fixtures/go_programs/builtin_complex/: go.mod
gors/tests/fixtures/go_programs/builtin_delete_clear/: go.mod
gors/tests/fixtures/go_programs/builtin_len_cap/: main.go
gors/tests/fixtures/go_programs/builtin_make_new/: main.go
gors/tests/fixtures/go_programs/channel_basic/: go.mod  main.go
gors/tests/fixtures/go_programs/channel_comma_ok/: go.mod
gors/tests/fixtures/go_programs/closure_callback_mutation/: go.mod
gors/tests/fixtures/go_programs/closure_capture_mutation/: go.mod  main.go
gors/tests/fixtures/go_programs/closure_return/: main.go
gors/tests/fixtures/go_programs/closure_shadowing/: go.mod  main.go
gors/tests/fixtures/go_programs/closure_variable_assignment/: go.mod
gors/tests/fixtures/go_programs/deeply_nested_expressions/: main.go
gors/tests/fixtures/go_spec/: spec.json
gors/tests/fixtures/go_stdlib/: unsupported.json
gors/tests/reports/: go-spec-conformance.json  go-stdlib-conformance.json
gors/tests/support/: generated_programs.rs
gors/tests/tools/go_oracle/: go.mod
gors/token/: mod.rs
rustfmt-wasm/: Cargo.toml  Dockerfile  lib.rs  readme.md  rust-toolchain
www/wasm/: Cargo.toml  LICENSE  lib.rs  package.json  readme.md
(+895 files in other folders)
