[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "scanner"
path = "fuzz_targets/scanner.rs"
test = false
doc = false

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4.2"
gors = { path = "../gors" }

[workspace]
members = ["."]
