[package]
name = "gors-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
gors = { path = ".." }

# AFL dependency is optional - only used when building fuzz targets with `cargo afl build`
afl = { version = "0.18", optional = true }

# Property-based testing (stable Rust alternative to fuzzing for CI)
[dev-dependencies]
proptest = "1.11"

[features]
default = []
# Enable AFL fuzzing targets (requires `cargo afl build`)
afl-fuzz = ["afl"]

# Fuzz targets are only built when the afl-fuzz feature is enabled
# Build with: cd fuzz && cargo afl build --release --features afl-fuzz

[[bin]]
name = "fuzz_scanner"
path = "fuzz_targets/scanner.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/parser.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/roundtrip.rs"
required-features = ["afl-fuzz"]
