[package]
name = "gors-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "gors"
path = "main.rs"

[dependencies]
clap = { version = "3.0.0-rc.0", features = ["derive"] }
gors = { path = "../gors" }
pretty_env_logger = "0.4.0"
serde_json = "1.0.72"
tempdir = "0.3.7"

[dev-dependencies]
colored = "2.0.0"
console = "0.15.0"
crossbeam = "0.8.1"
glob = "0.3.0"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
phf = { version = "0.10.0", features = ["macros"] }
pretty_assertions = "1.0.0"
similar = { version = "2.1.0", features = ["inline"] }
