[package]
name = "gors-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "gors"
path = "main.rs"

[dependencies]
atty = "0.2"
clap = { version = "4.0", features = ["derive"] }
gors = { path = "../gors" }
pretty_env_logger = "0.5"
serde_json = "1.0"
tempfile = "3.0"

[dev-dependencies]
colored = "2.0"
console = "0.15"
crossbeam = "0.8"
glob = "0.3"
lazy_static = "1.4"
num_cpus = "1.16"
phf = { version = "0.11", features = ["macros"] }
pretty_assertions = "1.4"
similar = { version = "2.4", features = ["inline"] }
