[package]
name = "gors-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI for gors — Go toolchain written in Rust"

[[bin]]
name = "gors"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
gors = { path = "../gors" }
atty = "0.2"
clap = { version = "4.6", features = ["derive"] }
pretty_env_logger = "0.5"
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27"
