[package]
name = "gors"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Experimental go toolchain written in rust (parser, compiler) "
homepage = "https://aymericbeaumet.github.io/gors/"
repository = "https://github.com/aymericbeaumet/gors/"

[lib]
name = "gors"
path = "src/lib.rs"

[lints]
workspace = true

[features]
integration = []

[dependencies]
# Library dependencies
log = { version = "0.4", features = ["release_max_level_warn"] }
phf = { version = "0.13", features = ["macros"] }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
sourcemap = "9"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
unicode-general-category = "1.1"

# Stdlib archive decompression (used by embedded stdlib at runtime)
flate2 = "1"
sha2 = "0.11"
tar = "0.4"

serde_json = "1.0"

[build-dependencies]
dirs = "6"
flate2 = "1"
reqwest = { version = "0.13", features = ["blocking", "rustls"] }
sha2 = "0.11"
tar = "0.4"

[dev-dependencies]
rayon = "1.12"
tempfile = "3.27"
