[package]
name = "gors"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Experimental go toolchain written in rust (parser, compiler) "
homepage = "https://aymericbeaumet.github.io/gors/"
repository = "https://github.com/aymericbeaumet/gors/"

[lib]
name = "gors"
path = "src/lib.rs"

[lints]
workspace = true

[features]
test_integration_lexer = ["dep:rayon"]
test_integration_parser = ["dep:rayon"]
test_integration_run = ["dep:rayon"]

[[test]]
name = "test_integration_lexer"
path = "../tests/test_integration_lexer.rs"
required-features = ["test_integration_lexer"]

[[test]]
name = "test_integration_parser"
path = "../tests/test_integration_parser.rs"
required-features = ["test_integration_parser"]

[[test]]
name = "test_integration_run"
path = "../tests/test_integration_run.rs"
required-features = ["test_integration_run"]

[dependencies]
# Library dependencies
log = { version = "0.4", features = ["release_max_level_warn"] }
phf = { version = "0.13", features = ["macros"] }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
sourcemap = "9"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
unicode-general-category = "1.1"

sha2 = "0.11"

serde_json = "1.0"
rayon = { version = "1.12", optional = true }

[build-dependencies]
dirs = "6"
flate2 = "1"
reqwest = { version = "0.13", features = ["blocking", "rustls"] }
sha2 = "0.11"
tar = "0.4"

[dev-dependencies]
rayon = "1.12"
tempfile = "3.27"
