[package]
name = "gors"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
description = "Experimental go toolchain written in rust (parser, compiler) "
homepage = "https://aymericbeaumet.github.io/gors/"
repository = "https://github.com/aymericbeaumet/gors/"

[lib]
name = "gors"
path = "src/lib.rs"

[lints]
workspace = true

[features]
test_integration_go_repositories = ["dep:rayon"]
test_integration_go_spec = ["dep:rayon"]
test_integration_go_stdlib = ["dep:rayon"]
test_integration_go_programs = ["dep:rayon"]

[[test]]
name = "test_integration_go_repositories"
path = "tests/test_integration_go_repositories.rs"
required-features = ["test_integration_go_repositories"]

[[test]]
name = "test_integration_go_spec"
path = "tests/test_integration_go_spec.rs"
required-features = ["test_integration_go_spec"]

[[test]]
name = "test_integration_go_stdlib"
path = "tests/test_integration_go_stdlib.rs"
required-features = ["test_integration_go_stdlib"]

[[test]]
name = "test_integration_go_programs"
path = "tests/test_integration_go_programs.rs"
required-features = ["test_integration_go_programs"]

[dependencies]
# Library dependencies
log = { version = "0.4", features = ["release_max_level_warn"] }
phf = { version = "0.13", features = ["macros"] }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
sourcemap = "9"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
unicode-general-category = "1.1"

sha2 = "0.11"

serde_json = "1.0"
rayon = { version = "1.12", optional = true }

[build-dependencies]
dirs = "6"
flate2 = "1"
reqwest = { version = "0.13", features = ["blocking", "rustls"] }
sha2 = "0.11"
tar = "0.4"

[dev-dependencies]
rayon = "1.12"
tempfile = "3.27"
