[package]
name = "rustfmt"
version = "0.1.0"
edition = "2018"

[lib]
name = "rustfmt"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustfmt-nightly = { git = "https://github.com/rust-lang/rustfmt.git", rev = "v1.4.37" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.78"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
