[package]
name = "gors-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "gors"
path = "lib.rs"
crate-type = ["cdylib"]

[workspace]

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
console_error_panic_hook = "0.1"
gors = { path = "../.." }
wasm-bindgen = "0.2"
