[package]
name = "gors-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
description = "WebAssembly bindings for gors"
repository = "https://github.com/aymericbeaumet/gors/"
publish = false

[lib]
name = "gors"
path = "lib.rs"
crate-type = ["cdylib"]

[workspace]

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
console_error_panic_hook = "0.1"
gors = { path = "../../gors" }
wasm-bindgen = "0.2"
